<resources>
    <string name="app_name">Eye See Pets</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up_u"><u>Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="new_pet">New Pet</string>
    <string name="new_geofence">New Geofence</string>
    <string name="name">Name</string>
    <string name="radius">Radius</string>
    <string name="birthdate">Birthdate</string>
    <string name="geofence">Geofence</string>
    <string name="breed">Breed</string>
    <string name="email">Email</string>
    <string name="app_id">1:437294129954:android:507be1bb3f817c71</string>
    <string name="database_url">https://eyeseepets-590b0.firebaseio.com/</string>
    <string name="storage_bucket">gs://eyeseepets-590b0.appspot.com/</string>
    <string name="hint_geofence">Tap on the map to select a midpoint. Press and hold on the marker to move it.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
