<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activities.LoginActivity"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_height="@dimen/_200sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/application_logo"/>

        <TextView
            android:id="@+id/lbTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="@dimen/_20sdp"/>

        <com.ndroid.CoolEditText
            android:id="@+id/etEmail"
            android:text=""
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:textSize="@dimen/_12sdp"
            custom:border_color="#262626"
            custom:border_radius="40"
            custom:border_stroke="2"
            android:inputType="text"
            android:maxLines="1"
            android:gravity="center"
            android:hint="@string/email"
            android:singleLine="true"
            android:elevation="@dimen/_4sdp"/>

        <com.ndroid.CoolEditText
            android:id="@+id/etPassword"
            android:text=""
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            custom:border_color="#262626"
            custom:border_radius="40"
            custom:border_stroke="2"
            android:inputType="textPassword"
            android:maxLines="1"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:elevation="@dimen/_4sdp"/>

        <com.ndroid.CoolButton
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:inputType="text"
            android:maxLines="1"
            android:text="@string/log_in"
            custom:border_color="#262626"
            android:background="@color/colorLogin"
            custom:border_radius="50" />

        <com.ndroid.CoolButton
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_9sdp"
            android:text="@string/sign_up_u"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:minHeight="0dp"
            android:minWidth="0dp"/>
    </LinearLayout>
</ScrollView>