<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Activities.SignUpActivity"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/tbNewPet"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp" >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rlSignUp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:fitsSystemWindows="true"
            android:isScrollContainer="false"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:text="@string/new_geofence"
                android:textSize="@dimen/_17sdp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF"/>
            <Button
                android:id="@+id/btnBack"
                android:background="@drawable/ic_arrow_back_white_24dp"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/btnConfirm"
                android:background="@drawable/ic_check_white_24dp"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:id="@+id/clDataContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        custom:layout_constraintTop_toBottomOf="@+id/tbNewPet"
        custom:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.ndroid.CoolEditText
                android:id="@+id/etName"
                android:text="MyGeofence"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/name"
                android:layout_marginTop="@dimen/_30sdp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"/>

            <com.ndroid.CoolEditText
                android:id="@+id/etRadius"
                android:text="10"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/radius"
                android:layout_marginTop="@dimen/_15sdp"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="3"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:text="@string/hint_geofence"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:gravity="center"/>
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    custom:layout_constraintStart_toStartOf="parent"
                    custom:layout_constraintEnd_toEndOf="parent"
                    custom:layout_constraintTop_toTopOf="parent"
                    custom:layout_constraintDimensionRatio="1:1">
                    <com.google.android.gms.maps.MapView
                        android:id="@+id/mvMap"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fabToggleMapStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_margin="@dimen/_10sdp"
                        app:srcCompat="@drawable/ic_layers_lgray_24dp"
                        app:backgroundTint="@color/white"/>
                </android.support.v7.widget.CardView>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>