<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Activities.SignUpActivity"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/tbNewPet"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        custom:layout_constraintTop_toTopOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp" >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rlSignUp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:fitsSystemWindows="true"
            android:isScrollContainer="false"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:text="@string/new_pet"
                android:textSize="@dimen/_17sdp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF"/>
            <Button
                android:id="@+id/btnBack"
                android:background="@drawable/ic_arrow_back_white_24dp"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/btnConfirm"
                android:background="@drawable/ic_check_white_24dp"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:id="@+id/clDataContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        custom:layout_constraintTop_toBottomOf="@+id/tbNewPet"
        custom:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/civPet"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:src="@drawable/logo_pet_resized"
                    app:civ_border_color="#F77171"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="#C7C7C7"
                    app:civ_shadow_radius="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/ic_add_button_green"
                    app:layout_constraintBottom_toBottomOf="@+id/civPet"
                    app:layout_constraintEnd_toEndOf="@+id/civPet"
                    tools:layout_editor_absoluteX="232dp"
                    tools:layout_editor_absoluteY="136dp" />
            </android.support.constraint.ConstraintLayout>
            <com.ndroid.CoolEditText
                android:id="@+id/etName"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/name"
                android:layout_marginTop="@dimen/_30sdp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"/>
            <RadioGroup
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/rbMale"
                    android:text="Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:checked="true"
                    android:layout_marginRight="@dimen/_20sdp"/>
                <RadioButton
                    android:id="@+id/rbFemale"
                    android:text="Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"/>
            </RadioGroup>
            <com.ndroid.CoolEditText
                android:id="@+id/etBirthdate"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/birthdate"
                android:layout_marginTop="@dimen/_15sdp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"
                android:focusable="false"
                android:clickable="true"/>
            <com.ndroid.CoolEditText
                android:id="@+id/etBreed"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/breed"
                android:layout_marginTop="@dimen/_15sdp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"/>
            <com.ndroid.CoolEditText
                android:id="@+id/etDescription"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="Description"
                android:layout_marginTop="@dimen/_15sdp"
                android:inputType="text"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"/>
            <com.ndroid.CoolEditText
                android:id="@+id/etColor"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="Color"
                android:layout_marginTop="@dimen/_15sdp"
                android:inputType="text"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"/>
            <com.ndroid.CoolEditText
                android:id="@+id/etSize"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="Size"
                android:layout_marginTop="@dimen/_15sdp"
                android:inputType="text"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"/>
            <com.ndroid.CoolEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="Phone Number"
                android:layout_marginTop="@dimen/_15sdp"
                android:inputType="number"
                android:maxLength="11"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"/>
            <com.ndroid.CoolEditText
                android:id="@+id/etGeofence"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/geofence"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_35sdp"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp"
                custom:border_color="#262626"
                custom:border_radius="40"
                custom:border_stroke="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                custom:layout_constraintTop_toTopOf="parent"
                android:focusable="false"
                android:clickable="true"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>